# OperaLibre

./: .env.example  .gitignore  LICENSE.md  Package.swift  README.md  operalibre-nginx.conf  operalibre.service  package-lock.json  package.json  server.config.example
.github/workflows/: ci.yml  docs.yml  release.yml
apps/launcher/: Cargo.toml
apps/launcher/src/: main.rs
apps/macos/Resources/: OperaLibre.icns
apps/macos/Sources/OperaLibre/: main.swift
apps/server/: Cargo.toml  nohup.out
apps/server/src/: alignment.rs  main.rs  updates.rs
apps/web/: capacitor.config.ts  index.html  package.json  vite.config.ts
apps/web/android/: capacitor.settings.gradle
apps/web/android/app/: build.gradle  (+1 more)
apps/web/public/: manifest.webmanifest
apps/web/src/: Admin.tsx  App.tsx  Auth.tsx  Profile.tsx  api.ts  backgroundDownloads.ts  bookMetadata.ts  demo.ts  jellyfin.ts  libationState.ts  localLibrary.ts  main.tsx  native.ts  nativeAudio.ts  offline.ts  playbackSpeed.ts  reliability.ts  styles.css  types.ts
apps/web/test/: bookMetadata.test.ts  demo.test.ts  libation-state.test.ts  playbackSpeed.test.ts  reliability.test.ts
docs/: Gemfile  _config.yml  api.md  configuration.md  deployment.md  getting-started.md  index.md  installing-a-release.md  libation.md  library-layout.md  privacy-policy.md  troubleshooting.md  users.md  using-operalibre.md
docs/_site/: api.html  configuration.html  deployment.html  getting-started.html  index.html  libation.html  library-layout.html  troubleshooting.html  users.html
docs/assets/css/: custom.css
release/: RELEASE_NOTES.md  START-HERE-combined.txt  START-HERE-frontend.txt  START-HERE-server.txt  combined.config  server-only.config  start.cmd  start.sh
script/: build_and_run.sh  build_android.sh  build_ios.sh  dev.mjs  package_release.mjs
(+26 files in other folders)
